--- a/infra/project-resources/base/gke-cluster-np.yaml
+++ b/infra/project-resources/base/gke-cluster-np.yaml
@@ -1,32 +1,13 @@
 apiVersion: container.cnrm.cloud.google.com/v1beta1
 kind: ContainerNodePool
 metadata:
-  labels:
-    label-one: "value-one"
-  name: containernodepool-sample
+  name: my-node-pool-1
 spec:
   location: us-east1-c
   autoscaling:
     minNodeCount: 1
-    maxNodeCount: 3
+    maxNodeCount: 3  
   nodeConfig:
-    diskSizeGb: 100
-    diskType: pd-standard
-    tags:
-      - tagone
-      - tagtwo
-    preemptible: false
-    minCpuPlatform: "Intel Haswell"
-    oauthScopes:
-      - "https://www.googleapis.com/auth/logging.write"
-      - "https://www.googleapis.com/auth/monitoring"
-    guestAccelerator:
-      - type: "nvidia-tesla-k80"
-        count: 1
-    metadata:
-      disable-legacy-endpoints: "true"
-  management:
-    autoRepair: true
-    autoUpgrade: true
+    machineType: e2-standard-2
   clusterRef:
     name: containernodepool-dep
