--- a/infra/project-resources/base/gke-cluster.yaml
+++ b/infra/project-resources/base/gke-cluster.yaml
@@ -3,16 +3,7 @@ kind: ContainerCluster
 metadata:
   annotations:
     cnrm.cloud.google.com/remove-default-node-pool: "true"
-  name: containernodepool-dep
+  name: my-cluster
 spec:
-  location: us-east1-c
+  location: us-west1-a
   initialNodeCount: 1
-  # masterAuth:
-  #   username: "user"
-  #   password:
-  #     valueFrom:
-  #       secretKeyRef:
-  #         name: containernodepool-dep
-  #         key: password
-  #   clientCertificateConfig:
-  #     issueClientCertificate: false
